# libipinfo

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  build-setup.sh  config.h.in  configure.ac  gettext_setup.h
ipinfo/: Makefile.am  ipinfo.c
libipinfo/: Makefile.am  format.c  ipinfo.h  ipv4_format.c  ipv4_format.h  ipv4_netmask.c  ipv4_netmask.h  ipv6_classify.c  ipv6_classify.h  ipv6_format.c  ipv6_format.h  parse.c  tokenize.c  tokenize.h
po/: ChangeLog  Makevars  POTFILES.in  ipinfo.pot  nl.po
rfc/: README  draft-main-ipaddr-text-rep-00.txt  nogmogelijke.txt  rfc-index.txt
tests/: Makefile.am  test.c
