# Makefile.am --- Top level Makefile.am
# Copyright (c) 2010
# Maurice Makaay
#
# This file is part of the IPinfo package.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the MIT license. You should have received a copy
# of the license along with this program. If not, see the website
# <http://www.opensource.org/licenses/mit-license.php>
#
# Process this file with automake to produce Makefile.in.

SUBDIRS = libipinfo ipinfo po tests
ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = config.rpath gettext.h gettext_setup.h

